--- a/STUDY AREA - ENTREPRENEURSHIP ARTICLES (Strategy)/scss/_front_page.scss
+++ b/STUDY AREA - ENTREPRENEURSHIP ARTICLES (Strategy)/scss/_front_page.scss
@@ -321,6 +321,23 @@ color: #9E9E9E;
       width:95%;
   }
 }
+@media(max-width:520px){
+  #form-row{
+    display:none;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  #form-row input, #mainbtn {
+    max-width: 260px;
+  }
+}
+@media(max-width:400px){
+  #form-now button{
+    margin-top: 100px;
+  }
+}
+
 @media(max-width:420px){
   .newrow,.title-content{
       display: flex;
