--- a/STUDY AREA - ENTREPRENEURSHIP ARTICLES (Strategy) - Article 1/scss/_front_page.scss
+++ b/STUDY AREA - ENTREPRENEURSHIP ARTICLES (Strategy) - Article 1/scss/_front_page.scss
@@ -23,24 +23,6 @@ background:white;
 border-top-right-radius:10px;
 }
 
-.main-buttons{
-cursor: pointer;
-margin-bottom: 30px;
-display: flex;
-padding:10px 20px;
-font-size:17px;
-align-items: center;
-background:white;
-border-radius: 10px;
-filter: drop-shadow(0px 2px 0px rgba(158, 158, 158, 0.5));
-border: 1px solid $grey-1_color;
-color:$primary_color;
-font-weight: bold;
-transition: .4s ease-in-out;
-min-width: 285px;
-text-decoration: none;
-display: inline-block;
-}
 p{
 font-family: $Noto-Sans;
 font-style: normal;
@@ -184,34 +166,6 @@ color: #9E9E9E;
   font-family: Noto Sans;
 }
 
-#article-button{
-border: 1px solid $grey-1_color;
-background:white;
-border-radius: 10px;
-font-family: $Noto-Sans;
-font-style: normal;
-font-weight: 600;
-font-size: 15px;
-line-height: 24px;
-display: flex;
-align-items: center;
-letter-spacing: 0.03em;
-font-feature-settings: 'pnum' on, 'lnum' on;
-text-decoration: none;
-/* Icon (B) - Text 2 */
-padding:8px 20px;
-cursor: pointer;
-
-filter: drop-shadow(0px 2px 0px rgba(158, 158, 158, 0.5));
-color: $primary_color;
-margin-bottom: 30px;
-margin-top: 40px;
-transition: .3s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-#article-button:hover{
-  transform: scale(1.1);
-  text-decoration: none;
-}
 .blue-line{
   border:1px solid $primary_color;
   width:100px;
@@ -295,6 +249,16 @@ background:#fdfdfd;
     margin-top: 70px;
   }
 }
+@media(max-width:752px){
+  .author-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding:0 20px;
+  }
+}
 
 @media(max-width:720px){
   .newrow{
@@ -328,11 +292,7 @@ background:#fdfdfd;
   }
   .articl{
       margin-left: 0px;
-      
-      
-  }
-  p{
-      text-align: center;
+       
   }
 }
 
@@ -375,11 +335,12 @@ border-top-right-radius:10px;
   transform: translateY(100px);
 }
 }
-@media(max-width:600px){
+@media(max-width:500px){
   .header-upper-content{
-    padding:0 15px;
+    text-align: center;
   }
 }
+
 
 .frontpage{
   background:url('../img/footerimg.png');
@@ -455,6 +416,15 @@ margin: 50px 0;
     display: none;
   }
 }
+@media(max-width:600px){
+  article .article-title{
+    font-size:22px;
+  }
+  .header-upper-content{
+    padding:0 15px;
+  }
+
+}
 @media(min-width:720px){
   .slider{
     display: block;
@@ -465,4 +435,10 @@ margin: 50px 0;
 }
 @media(max-width:720px){
 
+}
+#greybg{
+  position: absolute;
+  top:200px;
+  left:-30px;
+  
 }
