--- a/STUDY AREA - ENTREPRENEURSHIP ARTICLES (Strategy)/scss/_front_page.scss
+++ b/STUDY AREA - ENTREPRENEURSHIP ARTICLES (Strategy)/scss/_front_page.scss
@@ -320,6 +320,10 @@ color: #9E9E9E;
   .h-para{
       width:95%;
   }
+  .header-text{
+    font-size:25px;
+    white-space: nowrap;
+  }
 }
 @media(max-width:520px){
   #form-row{
@@ -328,13 +332,21 @@ color: #9E9E9E;
     justify-content: center;
     align-items: center;
   }
-  #form-row input, #mainbtn {
+  #form-row input{
     max-width: 260px;
+  }
+  #mainbtn {
+    min-width: 260px;
+    margin: 14px 0;
   }
 }
 @media(max-width:400px){
   #form-now button{
     margin-top: 100px;
+  }
+  .header-text{
+    font-size:20px;
+    white-space: nowrap;
   }
 }
 
